[gd_scene load_steps=24 format=2]

[ext_resource path="res://Mobs/boss.gd" type="Script" id=1]
[ext_resource path="res://Sounds/my_sounds/bossdeath.wav" type="AudioStream" id=2]
[ext_resource path="res://Art/frames/big_demon_run_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://Art/frames/big_demon_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Sounds/my_sounds/fireball.wav" type="AudioStream" id=5]
[ext_resource path="res://Art/frames/big_demon_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Art/frames/big_demon_run_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Art/frames/big_demon_idle_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://Art/frames/big_demon_run_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://Art/frames/big_demon_idle_anim_f2.png" type="Texture" id=10]
[ext_resource path="res://Art/frames/big_demon_run_anim_f2.png" type="Texture" id=11]
[ext_resource path="res://Art/frames/big_demon_charge.png" type="Texture" id=12]
[ext_resource path="res://Art/testattack.png" type="Texture" id=13]
[ext_resource path="res://Chatboxes/my_theme.theme" type="Theme" id=14]
[ext_resource path="res://Sounds/my_sounds/50hp.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/my_sounds/25hp.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/my_sounds/75hp.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/Music/Fanfare_1.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "CHARGE_POWER",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "IDLE",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "WALK",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 12 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 6.35
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 51.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 51.49
radial_accel = 91.09
color = Color( 0.603922, 0.027451, 0, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 2.66667

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 401.5, 309 )

[node name="boss" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 52
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "CHARGE_POWER"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="SliceTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionArea" type="Area2D" parent="."]
z_index = 5
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 0, 3 )
scale = Vector2( 6, 6 )
z_index = 4
shape = SubResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0
attenuation = 3.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="Position2D" type="Position2D" parent="Node2D"]
position = Vector2( 14, 0 )

[node name="Testattack" type="Sprite" parent="Node2D/Position2D"]
visible = false
rotation = -0.436332
scale = Vector2( 0.0459866, 0.0432243 )
z_index = 3
texture = ExtResource( 13 )

[node name="FireballSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0
pitch_scale = 1.67
attenuation = 3.24901

[node name="ChargeCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ChargingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DoorArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 1.5, 1 )
shape = SubResource( 5 )

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="FireballCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HPbar" type="Node2D" parent="."]
position = Vector2( 0, -17 )

[node name="Control" type="Control" parent="HPbar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -20.0
margin_right = 92.0
margin_bottom = 20.0
rect_scale = Vector2( 0.25, 0.2 )

[node name="ProgressBar" type="ProgressBar" parent="HPbar/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 224.0
margin_top = 65.0
margin_right = 328.0
margin_bottom = 82.0
theme = ExtResource( 14 )
value = 100.0
percent_visible = false

[node name="hp75" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = 5.0
attenuation = 2.37841

[node name="hp50" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
attenuation = 1.86607

[node name="hp25" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
attenuation = 1.56917

[node name="winSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -5.0

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="SliceTimer" to="." method="_on_SliceTimer_timeout"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_CollisionArea_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="ChargeCooldown" to="." method="_on_ChargeCooldown_timeout"]
[connection signal="timeout" from="ChargingTimer" to="." method="_on_ChargingTimer_timeout"]
[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_DoorArea_body_exited"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="timeout" from="FireballCooldown" to="." method="_on_FireballCooldown_timeout"]
